Pree packaging game with working basic menu and pad + keyboard and mouse camera controls

--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/My_Content/Maps/Battle_Ground.Battle_Ground
-GameDefaultMap=/Game/My_Content/Maps/Battle_Ground.Battle_Ground
+GameDefaultMap=/Game/My_Content/Maps/MainMenu.MainMenu
 GlobalDefaultGameMode=/Script/BattleTank.BattleTankGameModeBase
 
 [/Script/Engine.PhysicsSettings]
