--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -45,6 +45,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Quit",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 +ActionMappings=(ActionName="NewActionMapping_0",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
 +ActionMappings=(ActionName="Quit",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_Special_Left)
++ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
 +AxisMappings=(AxisName="AimAzimuth",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="AimAzimuth",Scale=1.000000,Key=Gamepad_RightX)
 +AxisMappings=(AxisName="AimElevation",Scale=1.000000,Key=MouseY)
