--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -43,7 +43,6 @@ DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Quit",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
-+ActionMappings=(ActionName="NewActionMapping_0",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
 +ActionMappings=(ActionName="Quit",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_Special_Left)
 +ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
@@ -51,6 +50,14 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="AimAzimuth",Scale=1.000000,Key=Gamepad_RightX)
 +AxisMappings=(AxisName="AimElevation",Scale=1.000000,Key=MouseY)
 +AxisMappings=(AxisName="AimElevation",Scale=1.000000,Key=Gamepad_RightY)
++AxisMappings=(AxisName="LeftTrackThrottle",Scale=1.000000,Key=Gamepad_LeftTriggerAxis)
++AxisMappings=(AxisName="RightTrackThrottle",Scale=1.000000,Key=Gamepad_RightTriggerAxis)
++AxisMappings=(AxisName="LeftTrackThrottle",Scale=1.000000,Key=A)
++AxisMappings=(AxisName="RightTrackThrottle",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="LeftTrackThrottle",Scale=-1.000000,Key=Z)
++AxisMappings=(AxisName="RightTrackThrottle",Scale=-1.000000,Key=C)
++AxisMappings=(AxisName="Throttle",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="Throttle",Scale=-1.000000,Key=S)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
