AI movement in progress

--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -49,15 +49,19 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="AimAzimuth",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="AimAzimuth",Scale=1.000000,Key=Gamepad_RightX)
 +AxisMappings=(AxisName="AimElevation",Scale=1.000000,Key=MouseY)
-+AxisMappings=(AxisName="AimElevation",Scale=1.000000,Key=Gamepad_RightY)
++AxisMappings=(AxisName="AimElevation",Scale=-1.000000,Key=Gamepad_RightY)
 +AxisMappings=(AxisName="LeftTrackThrottle",Scale=1.000000,Key=Gamepad_LeftTriggerAxis)
 +AxisMappings=(AxisName="RightTrackThrottle",Scale=1.000000,Key=Gamepad_RightTriggerAxis)
-+AxisMappings=(AxisName="LeftTrackThrottle",Scale=1.000000,Key=A)
-+AxisMappings=(AxisName="RightTrackThrottle",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="LeftTrackThrottle",Scale=-1.000000,Key=Z)
 +AxisMappings=(AxisName="RightTrackThrottle",Scale=-1.000000,Key=C)
-+AxisMappings=(AxisName="Throttle",Scale=1.000000,Key=W)
-+AxisMappings=(AxisName="Throttle",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="Move Forward",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="Move Forward",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="Turn Right",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="Turn Right",Scale=-1.000000,Key=A)
++AxisMappings=(AxisName="Move Forward",Scale=1.000000,Key=Gamepad_LeftStick_Up)
++AxisMappings=(AxisName="Move Forward",Scale=-1.000000,Key=Gamepad_LeftStick_Down)
++AxisMappings=(AxisName="Turn Right",Scale=1.000000,Key=Gamepad_LeftStick_Right)
++AxisMappings=(AxisName="Turn Right",Scale=-1.000000,Key=Gamepad_LeftStick_Left)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
