Movement C++ scripts finished

--- a/BattleTank/Config/DefaultGame.ini
+++ b/BattleTank/Config/DefaultGame.ini
@@ -1,2 +1,4 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=2A3762084FE95674544683A59FDAB644
+CopyrightNotice=Copyright Adrian Kowarik
+
