Solved tank bugs

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
 Chris-Folea-MountainRange3.png
+BattleTank/Content/AdvancedVillagePack
+BattleTank/Content/DynamicGrassLite
+BattleTank/Content/Explosions/
+BattleTank/Content/FirstPerson/
+BattleTank/Content/FirstPersonBP/
+BattleTank/Content/FXVarietyPack/
+BattleTank/Content/ModularBuildingSet/
+BattleTank/Content/MultistoryDungeons/
+BattleTank/Content/ProceduralNaturePack/
+BattleTank/Content/SoulCity/
+BattleTank/Content/MyContent/
